# BciStudyProject

./: .gitignore  README.md  actiavte_shared_venv.sh  pyproject.toml  requirements.txt  setup.py  shared_venv.txt
configs/: base.yaml
configs/datasets/: clinical_states.yaml  imagined_words.yaml  motor_imagery.yaml
configs/models/: cnn1d.yaml  gru.yaml  liquid.yaml  lstm.yaml
docs/: dataset_contract.md
reports/: MotorImagery_bcicompiv2a_cspldamodel_report.md  MotorImagery_bcicompiv2a_shallowconvnet_report.md
reports/tables/: bcicompiv2a_cspldamodel_results.csv  bcicompiv2a_shallowconvnet_results.csv  summary_all_models.csv
reports/templates/: report_template.md  results_template.csv  summary_all_models.csv
scripts/: evaluate.py  preprocess.py  run_optuna.py  train.py
src/datasets/: base_dataset.py  base_imaged_speech_dataset.py  base_moabb_dataset.py
src/evaluation/: __init__.py  metrics.py  reporting.py  results.py  validation.py
src/experiments/: base_experiment.py
src/input_adapters/: __init__.py  base_input_adapter.py  cnn1d_adapter.py  cnn2d_adapter.py  lstm_adapter.py  registry.py
src/models/: __init__.py  base_model.py  csp_lda.py  eeg_encoder.py  llama_eeg.py  riemannian_svm.py  shallow_convnet.py
src/preprocessing/: base_preprocessor.py  pipelines.py
src/training/: callbacks.py  optimizers.py  schedulers.py  trainer.py  trainer_config.py
src/utils/: quick_eval.py  quick_eval_unresolved1.py  (+2 more)
tests/: test_adapters.py  test_datasets.py  test_end_to_end.py  test_input_adapters.py  test_moabb.py  test_models.py  test_reports.py
(+37 files in other folders)
