[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "eeg-ai"
version = "0.2.0"
authors = [{name = "Equipa EEG-AI"}]
description = "AI platform for EEG signal processing"
requires-python = ">=3.10"
# TODO: List all required packages (mne, torch, numpy, etc.) here after validation
dependencies = [] 

[tool.setuptools.packages.find]
# Start searching from the current directory
where = ["."]
# Include the 'src' folder as the main package
include = ["src*"]

# TODO FOR THE FUTURE:
# 1. Rename 'src' folder to 'eeg_ai' (or similar) to avoid generic naming.
# 2. Move 'eeg_ai' into a new 'src/' directory (standard src-layout).
# 3. Update all imports from 'from src.xxx' to 'from eeg_ai.xxx'.
# 4. Change 'where' to ["src"] and remove the manual 'include' filter.